<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.zkoss.zk</groupId>
	<artifactId>zk</artifactId>
	<version>8.5.0_jakarta</version>
	<packaging>jar</packaging>
	<name>ZK Kernel</name>
	<url>http://www.zkoss.org/zk</url>
	<description>ZK Kernel</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<licenses>
		<license>
			<name>GNU LESSER GENERAL PUBLIC LICENSE, Version 3</name>
			<url>http://www.gnu.org/licenses/lgpl.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>zkteam</id>
			<name>ZK Team</name>
			<email>info@zkoss.org</email>
			<url>http://www.zkoss.org</url>
			<organization>Potix</organization>
			<organizationUrl>http://www.zkoss.org</organizationUrl>
			<roles>
				<role>architect</role>
				<role>developer</role>
			</roles>
			<timezone>8</timezone>
			<properties>
				<picUrl>http://www.zkoss.org</picUrl>
			</properties>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:https://github.com/zkoss/zk.git</connection>
		<url>http://mavensync.zkoss.org/maven2</url>
	</scm>

	<repositories>
		<repository>
			<id>zk repository</id>
			<url>http://mavensync.zkoss.org/maven2</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>zkmaven</id>
			<name>ZK Maven Plugin Repository</name>
			<url>http://mavensync.zkoss.org/maven2</url>
		</pluginRepository>
		<pluginRepository>
			<releases>
				<enabled>false</enabled>
			</releases>
			<id>snapshots</id>
			<name>Maven Central Plugins Development Repository</name>
			<url>http://snapshots.maven.codehaus.org/maven2</url>
		</pluginRepository>
		<pluginRepository>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<id>central</id>
			<name>Maven Plugin Repository</name>
			<url>http://repo1.maven.org/maven2</url>
		</pluginRepository>
	</pluginRepositories>

	<dependencies>
		<dependency>
			<groupId>org.zkoss.common</groupId>
			<artifactId>zweb</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>javax.portlet</groupId>
			<artifactId>portlet-api</artifactId>
			<version>2.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.groovy</groupId>
			<artifactId>groovy-json</artifactId>
			<version>4.0.23</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.jruby</groupId>
			<artifactId>jruby</artifactId>
			<version>1.7.2</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.python</groupId>
			<artifactId>jython</artifactId>
			<version>2.7.4</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.mozilla</groupId>
			<artifactId>rhino</artifactId>
			<version>1.7.15</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>jakarta.servlet</groupId>
			<artifactId>jakarta.servlet-api</artifactId>
			<version>6.1.0</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>jakarta.platform</groupId>
			<artifactId>jakarta.jakartaee-api</artifactId>
			<version>11.0.0-M4</version> <!-- Or any other latest version -->
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.google.javascript</groupId>
			<artifactId>closure-compiler</artifactId>
			<version>v20240317</version>
		</dependency>
	</dependencies>

	<build>
		<directory>${project.basedir}/debug</directory>
		<outputDirectory>${project.basedir}/debug/classes</outputDirectory>
		<finalName>${project.artifactId}-${project.version}</finalName>
		<testOutputDirectory>${project.build.directory}/test-classes
		</testOutputDirectory>
		<sourceDirectory>${project.basedir}/src/</sourceDirectory>
		<resources>
			<resource>
				<directory>${project.basedir}/src/archive</directory>
			</resource>
		</resources>
		<plugins>
			<!--<plugin>
				<groupId>org.zkoss.maven</groupId>
				<artifactId>yuicompressor-maven-plugin-zk</artifactId>
				<version>1.1.4</version>
				<executions>
					<execution>
						<goals>
							<goal>compress</goal>
						</goals>
					</execution>
				</executions>
			</plugin>-->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<source>21</source>
					<target>21</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project> 
